--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "editor.defaultFormatter": "denoland.vscode-deno",
-  "deno.config": "deno.json"
+  "deno.config": "deno.json",
+  "deno.cache": ".cache"
 }
