--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,9 @@
     }
   },
   "tasks": {
-    "start": "deno run main.ts"
+    "cache": "deno cache --lock=lock.json --lock-write deps.ts",
+    "cache-reload": "deno cache --reload --lock=lock.json deps.ts",
+    "start": "deno run main.ts",
+    "start-cached-only": "deno run --lock=lock.json --cached-only main.ts"
   }
 }
