Updated deno config

--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,11 @@
   "fmt": {
     "files": {
       "exclude": [
+        ".cache",
+        ".vscode",
+        ".gitignore",
+        "deno.json",
+        "lock.json",
         "README.md"
       ]
     }
