--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -9,6 +9,9 @@ on:
 permissions:
   contents: read
 
+env:
+  CACHE_DIR: .actions-cache
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -21,6 +24,12 @@ jobs:
         uses: denoland/setup-deno@004814556e37c54a2f6e31384c9e18e983317366
         with:
           deno-version: v1.x
+
+      - name: Cache Deno dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.CACHE_DIR }}
+          key: ${{ hashFiles('lock.json') }}
 
       - name: Verify formatting
         run: deno fmt --check
