chore: clean up deno tasks

--- a/deno.json
+++ b/deno.json
@@ -16,10 +16,10 @@
     ]
   },
   "tasks": {
-    "cache": "deno cache --lock=lock.json --lock-write deps.ts",
-    "cache-reload": "deno cache --reload --lock=lock.json deps.ts",
+    "cache": "deno cache --lock-write deps.ts",
+    "cache-reload": "deno cache --reload deps.ts",
     "start": "deno run main.ts",
-    "start-cached-only": "deno run --lock=lock.json --cached-only main.ts",
-    "test": "deno test -A --unstable"
+    "start-cached-only": "deno run --cached-only main.ts",
+    "test": "deno test -A"
   }
 }
