--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -21,15 +21,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@v2
         with:
-          deno-version: v1.x
+          deno-version: v2.x
 
       - name: Cache Deno dependencies
         uses: actions/cache@v4
         with:
           path: ${{ env.DENO_DIR }}
-          key: ${{ hashFiles('lock.json') }}
+          key: ${{ hashFiles('deno.lock') }}
 
       - name: Verify formatting
         run: deno fmt --check
